refactor: Update .gitignore to include .pkl files and outputs/ directory

--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -2,7 +2,6 @@ conversation_generation_task:
   description: >
     Generate a natural conversation between a doctor and a patient based on a medical scenario. The conversation should include the patient's symptoms, the doctor's diagnosis, and the prescribed treatment plan.
     The wording of the conversation uses tone in real situations. Recognize that every speech must be a recorded in situation.
-    Dialouge must naturally flow and be contextually appropriate. Not likely to be a transcript of a real conversation.
     Create a conversation that takes place during {situation} in the {department}.
   expected_output: >
     A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean)
@@ -13,7 +12,8 @@ intent_extraction_task:
     Analyze the generated doctor-patient conversation and extract key medical intents. Identify and categorize intentions such as symptom reporting, diagnosis requests, treatment discussions, and follow-up arrangements.
     Intent should be a simple word only.
   expected_output: >
-    A structured list of identified medical intents, each categorized and briefly explained. The output should include the context in which each intent was expressed.(target language: korean)
+    A structured list of identified medical intents, each categorized and briefly explained. 
+    The output should include the context in which each intent was expressed.(target language: korean)
   agent: medical_intent_extractor
   context:
     - conversation_generation_task
