refactor: Update conversation_generation_task description

--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -7,18 +7,26 @@ conversation_generation_task:
       <example>
         [info] a medical consultation in the Advanced General Dentistry at 2024/05/07
         ---------------------------------------
-        의사: 교정 하시려는 이유가.. 어떤 부분이시죠?
-        환자: 거울 봤을 때 고르지 않아 보이는 것도 있고 가끔 물 때 아플 때도 있고..
-        의사: ‘이~’ 해보세요. 여기 겹쳐있는 부분이 큰 앞니하고 작은 앞니 사이로 밑에 치아가 들어가는 거예요. 다른 데로 넣어서 조금 편하게 하고 싶어도 항상 이를 물 때는 그리로 들어가야 돼요. 그렇게 될 수 밖에 없어요. 그럼 여기가 운동하는 각도가 다르죠. 보통 ‘아~’하고 다물고 하면 똑바로 이렇게 되어야 하는데 항상 앞에 치우쳐서 기능을 한단 말이에요. 오른쪽에 가는 부하하고 왼쪽에 가는 부하가 다르죠. 환경이 그러니까 불편할 확률이 조금 더 높아져요. 피곤하거나 그러면 근육이 좀 불편할 수가 있죠. 
-        환자: 가끔 그런 것 같긴 해요. 
-        의사: 그런 점이 있고, 이 엑스레이 사진은 좀전에 빙 돌아가면서 찍은 사진 있죠? 여기서부터 얼굴을 평면으로 전개도처럼 쭉 돌린거예요. 잇몸이 안 좋거나 뿌리가 짧은 분들이 또 있어요. 뿌리 부분이 짧거나 그러면 교정할 때 좀 불리해요. 교정하면 뿌리가 문제는 안되지만 아주 조금씩 짧아지는 경우도 있거든요. 시작하기 전부터 뿌리가 어떤 이유 때문에 짧은 분들이 있어요. 그런 분들은 교정할 때 목표치를 조금 낮추거나.. 제약 조건이 있거나 아주 심하면 교정을 할 수 없을 수도 있어요. 왜냐면 너무 짧은 분들, 그런 분들은 드문데 교정하다가 이가 빠질 수도 있어요. 그럴 수도 있기 때문에 엑스레이를 찍어서 그런 것을 먼저 체크합니다. 
-        환자: 저는 어떤 편이에요?
-        의사: 지금 뿌리는 아주 좋아요. 더 좋을 수가 없어요. 아주 좋아요.
-        의사: 자 이거는 옆에서 찍은 사진이에요. 아까는 이렇게 돌려서 찍은 사진이고 이건 옆에서 찍은 사진인데 이건 왜 보냐면 윗치아하고 아랫치아 각도를 주로 보는 거예요. 치아가 뻗어있느냐 아니면 안으로 쏠려있느냐 그런 것들은 이 사진을 찍어봐야 돼요. 찍어서 이 각도를 보고 치아가 입 모양에 어떤 영향을 주느냐를 봅니다…… (중략) 지금 말씀드린 것 중에 혹시 궁금하신 점 있으실까요?
-        환자: 저는 교정을 해야 된다면 발치도 해야 되나요?
-        의사: 선생님 같은 경우는 발치하지 않으셔도 돼요. 자세한 것은 본도 뜨고 카메라 사진도 찍어서 조금 더 정밀하게 봐야 되는데 지금 봤을 때 거의 70~80% 이상으로 발치는 필요 없구요. 
-        환자: 교정 시작하게 되면 얼마나 걸릴까요?
-        의사: 교정 기간은 1년 반 정도 걸려요. (중략) 치료의 완성도를 더 좋게 할 수 있어요. 1년 정도로도 거꾸로 물리는 배열 정도는 조금 좋게 할 수 있는데 촉박해요. 시간에 쫓기면 교정을 제대로 할 수 없기 때문에 한 1년 반 정도는 생각을 하셔야 되고, 한 달에 한 번, 4주에 한 번씩 나오셔야 하고 간혹 5, 6주에 한번씩 오실 때도 있는데 그건 경우마다 달라요. 
+        의사: 안녕하세요. 처음 뵙겠습니다. 어디가 불편해서 오셨어요?
+        환자: 아랫니가 약간 시려가지고 오게 됐습니다.
+        의사: 아랫니가 시려서~. 봐 드릴게요. 한번 누워보세요. 시린거 한번 확인 하겠습니다. 요렇게 할 때 어떤지 볼게요. 시릴 수 있습니다. 시리세요? 여기 보니까 잇몸도 내려가있고 파져있네요. 여기는 조금 괜찮으세요? 여기도 시리세요? 
+        환자: 여기까진 괜찮아요. 
+        의사: 자 맨 뒤는 괜찮고, 이~ 해보세요. 위는 어떠세요? 시리세요? 
+        환자: 위에는 약간 시려요.
+        의사: 약간…. 여기는요? 
+        환자: 거기는 괜찮습니다.
+        의사: 괜찮으세요? 치석이 좀 많으시네요. 예전에 아말감 하셨는데 그 옆에 치아가 조금 깨져있네요. 앉아보세요. 설명을 좀 드릴게요. 여기 엑스레이 보면 이 치아거든요. 시린 게 지금. 왼쪽 아래 송곳니에요. 그 왼쪽 아래 송곳니가 잇몸이 이렇게 내려갔어요. 이렇게. 이렇게 되어야 안 추운데 이렇게 내려가면 춥죠. 이해하시겠죠? 거기다가 파져 있어요. 신경이 이 안에 있는데 신호가 빨리 전달이 되는 거예요.
+        환자: 네.
+        의사: 그래서 차가운 신호가 딱 가면 ‘아 시려’ 하고 이가 느끼는 거거든요. 그래서 그 부위는 플라스틱 종류의 물질을 가지고 거기다가 때우는 치과 재료가 있어요. 레진이라는 재료를 가지고 거기를 때워놓으면 시린 증상이 많이 좋아질 겁니다. 그리고 또 한 가지는 이 부분의 이가 삐뚤빼뚤 하다보니까 아랫니 안쪽에 치석이 좀 많이 있으세요. 거기를 잘 못 닦거든요. 그래서 거기 스케일링 하시고 이 닦는 방법 배우시면 될 것 같아요. 예전에 아말감 해둔 곳은 지금 크게 문제가 없으면 그냥 쓰시고 나중에 증상이 생긴다든가 깨지거나 하시면 그때가서 교체하셔도 될 것 같아요. 그 외에 특별한 문제는 없습니다. 
+        환자: 원장님 저 질문 하나만 해도 될까요?
+        의사: 네 
+        환자: 보통 이런 크라운은 얼마나 유지가 되나요?
+        의사: 사람마다 달라요. 치아 자체의 컨디션이 좋았고 선생님이 보철물을 잘 만들어서 끼워넣고 환자가 관리를 잘 한다면 10년, 20년, 30년, 40년도 가요. 근데 관리가 안되면 치아와 보철물 사이에 음식이 끼었는데 그걸 잘 못닦아낸다든가 하면 그 속에 세균이 살면서 이 세균이 이를 썩게 만들겠죠. 그러면 어떤 경우에는 5년이 안됐는데도 썩어서 탈락이 돼서 오시는 분들도 있어요. 그래서 6개월에서 1년에 한번씩은 치과에 방문하셔가지고 점검을 받으세요. 
+        환자: 이 크라운을 더 이상 할 수 없을 정도가 되면 그 다음에 임플란트를 하게 되나요?
+        의사: 네 그렇죠. 크라운을 쓸 수 없다, 뿌리만 남았다 그러면 거기다 할 수가 없잖아요. 그럴 경우에는 이를 빼고 거기다가 임플란트를 집어 넣어서 위에 크라운이라고 말하는 그 부분을 다시 만들어서 잘 씹어먹을 수 있게 만드는 거죠. 더 궁금하신 거 있으세요?
+        환자: 아니요 없습니다.
+        의사: 오늘 스케일링 받으시고요. 치석 다 제거하시고 이 닦는 방법을 하나 배우시고요. 치료는 다음번 약속 잡아서 해드릴 겁니다.
+        환자: 네 원장님 오늘 너무 감사합니다.
       </example>
   
     Create a conversation that takes place during {situation} in the {department} at {date}.
