refactor: Update conversation_generation_task description formatting and add missing punctuation

--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -1,34 +1,123 @@
 conversation_generation_task:
   description: >
-    Generate a natural conversation between a doctor and a patient based on a medical scenario. 
+    Generate a natural conversation between a doctor and a patient based on a medical scenario.
     The conversation should include the patient's symptoms, the doctor's diagnosis, and the prescribed treatment plan.
     The wording of the conversation uses tone in real situations.
     Follow the format below:
       <example>
         [info] a medical consultation in the Advanced General Dentistry at 2024/05/07
         ---------------------------------------
-        의사: 안녕하세요. 처음 뵙겠습니다. 어디가 불편해서 오셨어요?
+        의사: 안녕하세요.
+        의사: 처음 뵙겠습니다.
+        의사: 어디가 불편해서 오셨어요?
         환자: 아랫니가 약간 시려가지고 오게 됐습니다.
-        의사: 아랫니가 시려서~. 봐 드릴게요. 한번 누워보세요. 시린거 한번 확인 하겠습니다. 요렇게 할 때 어떤지 볼게요. 시릴 수 있습니다. 시리세요? 여기 보니까 잇몸도 내려가있고 파져있네요. 여기는 조금 괜찮으세요? 여기도 시리세요? 
-        환자: 여기까진 괜찮아요. 
-        의사: 자 맨 뒤는 괜찮고, 이~ 해보세요. 위는 어떠세요? 시리세요? 
+        의사: 아랫니가 시려서~.
+        의사: 봐 드릴게요.
+        의사: 한번 누워보세요.
+        의사: 시린거 한번 확인 하겠습니다.
+        의사: 요렇게 할 때 어떤지 볼게요.
+        의사: 시릴 수 있습니다.
+        의사: 시리세요?
+        의사: 여기 보니까 잇몸도 내려가있고 파져있네요.
+        의사: 여기는 조금 괜찮으세요?
+        의사: 여기도 시리세요? 
+        환자: 여기까진 괜찮아요.
+        의사: 자 맨 뒤는 괜찮고, 이~ 해보세요.
+        의사: 위는 어떠세요?
+        의사: 시리세요? 
         환자: 위에는 약간 시려요.
-        의사: 약간…. 여기는요? 
+        의사: 약간….여기는요? 
         환자: 거기는 괜찮습니다.
-        의사: 괜찮으세요? 치석이 좀 많으시네요. 예전에 아말감 하셨는데 그 옆에 치아가 조금 깨져있네요. 앉아보세요. 설명을 좀 드릴게요. 여기 엑스레이 보면 이 치아거든요. 시린 게 지금. 왼쪽 아래 송곳니에요. 그 왼쪽 아래 송곳니가 잇몸이 이렇게 내려갔어요. 이렇게. 이렇게 되어야 안 추운데 이렇게 내려가면 춥죠. 이해하시겠죠? 거기다가 파져 있어요. 신경이 이 안에 있는데 신호가 빨리 전달이 되는 거예요.
+        의사: 괜찮으세요?
+        의사: 치석이 좀 많으시네요.
+        의사: 예전에 아말감 하셨는데 그 옆에 치아가 조금 깨져있네요.
+        의사: 앉아보세요.
+        의사: 설명을 좀 드릴게요.
+        의사: 여기 엑스레이 보면 이 치아거든요.
+        의사: 시린 게 지금.
+        의사: 왼쪽 아래 송곳니에요.
+        의사: 그 왼쪽 아래 송곳니가 잇몸이 이렇게 내려갔어요.
+        의사: 이렇게.
+        의사: 이렇게 되어야 안 추운데 이렇게 내려가면 춥죠.
+        의사: 이해하시겠죠?
+        의사: 거기다가 파져 있어요.
+        의사: 신경이 이 안에 있는데 신호가 빨리 전달이 되는 거예요.
         환자: 네.
-        의사: 그래서 차가운 신호가 딱 가면 ‘아 시려’ 하고 이가 느끼는 거거든요. 그래서 그 부위는 플라스틱 종류의 물질을 가지고 거기다가 때우는 치과 재료가 있어요. 레진이라는 재료를 가지고 거기를 때워놓으면 시린 증상이 많이 좋아질 겁니다. 그리고 또 한 가지는 이 부분의 이가 삐뚤빼뚤 하다보니까 아랫니 안쪽에 치석이 좀 많이 있으세요. 거기를 잘 못 닦거든요. 그래서 거기 스케일링 하시고 이 닦는 방법 배우시면 될 것 같아요. 예전에 아말감 해둔 곳은 지금 크게 문제가 없으면 그냥 쓰시고 나중에 증상이 생긴다든가 깨지거나 하시면 그때가서 교체하셔도 될 것 같아요. 그 외에 특별한 문제는 없습니다. 
+        의사: 그래서 차가운 신호가 딱 가면 ‘아 시려’ 하고 이가 느끼는 거거든요.
+        의사: 그래서 그 부위는 플라스틱 종류의 물질을 가지고 거기다가 때우는 치과 재료가 있어요.
+        의사: 레진이라는 재료를 가지고 거기를 때워놓으면 시린 증상이 많이 좋아질 겁니다.
+        의사: 그리고 또 한 가지는 이 부분의 이가 삐뚤빼뚤 하다보니까 아랫니 안쪽에 치석이 좀 많이 있으세요.
+        의사: 거기를 잘 못 닦거든요.
+        의사: 그래서 거기 스케일링 하시고 이 닦는 방법 배우시면 될 것 같아요.
+        의사: 예전에 아말감 해둔 곳은 지금 크게 문제가 없으면 그냥 쓰시고 나중에 증상이 생긴다든가 깨지거나 하시면 그때가서 교체하셔도 될 것 같아요.
+        의사: 그 외에 특별한 문제는 없습니다.
         환자: 원장님 저 질문 하나만 해도 될까요?
         의사: 네 
         환자: 보통 이런 크라운은 얼마나 유지가 되나요?
-        의사: 사람마다 달라요. 치아 자체의 컨디션이 좋았고 선생님이 보철물을 잘 만들어서 끼워넣고 환자가 관리를 잘 한다면 10년, 20년, 30년, 40년도 가요. 근데 관리가 안되면 치아와 보철물 사이에 음식이 끼었는데 그걸 잘 못닦아낸다든가 하면 그 속에 세균이 살면서 이 세균이 이를 썩게 만들겠죠. 그러면 어떤 경우에는 5년이 안됐는데도 썩어서 탈락이 돼서 오시는 분들도 있어요. 그래서 6개월에서 1년에 한번씩은 치과에 방문하셔가지고 점검을 받으세요. 
+        의사: 사람마다 달라요.
+        의사: 치아 자체의 컨디션이 좋았고 선생님이 보철물을 잘 만들어서 끼워넣고 환자가 관리를 잘 한다면 10년, 20년, 30년, 40년도 가요.
+        의사: 근데 관리가 안되면 치아와 보철물 사이에 음식이 끼었는데 그걸 잘 못닦아낸다든가 하면 그 속에 세균이 살면서 이 세균이 이를 썩게 만들겠죠.
+        의사: 그러면 어떤 경우에는 5년이 안됐는데도 썩어서 탈락이 돼서 오시는 분들도 있어요.
+        의사: 그래서 6개월에서 1년에 한번씩은 치과에 방문하셔가지고 점검을 받으세요.
         환자: 이 크라운을 더 이상 할 수 없을 정도가 되면 그 다음에 임플란트를 하게 되나요?
-        의사: 네 그렇죠. 크라운을 쓸 수 없다, 뿌리만 남았다 그러면 거기다 할 수가 없잖아요. 그럴 경우에는 이를 빼고 거기다가 임플란트를 집어 넣어서 위에 크라운이라고 말하는 그 부분을 다시 만들어서 잘 씹어먹을 수 있게 만드는 거죠. 더 궁금하신 거 있으세요?
+        의사: 네 그렇죠.크라운을 쓸 수 없다, 뿌리만 남았다 그러면 거기다 할 수가 없잖아요.
+        의사: 그럴 경우에는 이를 빼고 거기다가 임플란트를 집어 넣어서 위에 크라운이라고 말하는 그 부분을 다시 만들어서 잘 씹어먹을 수 있게 만드는 거죠.
+        의사: 더 궁금하신 거 있으세요?
         환자: 아니요 없습니다.
-        의사: 오늘 스케일링 받으시고요. 치석 다 제거하시고 이 닦는 방법을 하나 배우시고요. 치료는 다음번 약속 잡아서 해드릴 겁니다.
+        의사: 오늘 스케일링 받으시고요.
+        의사: 치석 다 제거하시고 이 닦는 방법을 하나 배우시고요.
+        의사: 치료는 다음번 약속 잡아서 해드릴 겁니다.
         환자: 네 원장님 오늘 너무 감사합니다.
       </example>
-  
+      <example>
+        [info] a medical consultation in the Advanced General Dentistry at 2024/05/07
+        ---------------------------------------
+        <파노라마 사진을 보며>
+        의사: 이쪽이 오른쪽이고 이쪽이 왼쪽입니다.
+        의사: 지금 오른쪽 어금니는 치아가 없는 상태이시고 송곳니는 부러져있고 그 앞에 작은 앞니도 부러져 있고요.
+        의사: 반대쪽도 어금니는 없고, 그 앞에 혼자있는 작은 어금니는 많이 흔들리고 그 앞에 송곳니도 부러지고 염증이 있는 상태예요.그래서 위에 있는 대문니 2개를 제외하고는 치아들이 수명을 다 한 상태라, 오늘 발치를 할거구요.밑에는 여기 사랑니가 하나 남아있고, 또 송곳니와 그 뒤에 작은 어금니들.요거는 지금 상태가 괜찮습니다.네 그 손으로 짚고 계시는 그 치아들..
+        의사: 앞니가 밑에도 4개가 있는데 그 중에 2개는 빠진 상태구요.
+        의사: 나머지 2개 치아도 뿌리쪽에 염증 때문에 이가 꽤 흔들리는 상태입니다.
+        환자: 완전히 흔들리더라구요
+        의사: 그래서 앞니를 살려서 쓰기에는 조금 상태가 안 좋기 때문에 요것도 같이 발치를 할거구요.
+        의사: 그리고 부러진 치아, 이가 부러지고 노출된 신경 때문에 감염이 일어나서 이렇게 뿌리쪽에 염증이 있는데 요거는 발치하고 염증 제거를 할거구요.
+        의사: 그리고 오른쪽 아래에도 부러진 뿌리 조각들, 이런 것들은 다 제거할 겁니다.
+        의사: 그래서 이렇게 뺄 것 빼고 정리를 하고 나면 위에는 치아가 양쪽에 6개씩 비게 되거든요.
+        의사: 네 근데 그거를 임플란트를 4개를 심어서 회복을 할 거고, 6개 치아를 다 채우지는 않고.
+        의사: 이 맨 끝에 것들은 꼭 회복해야 되는 건 아니거든요.
+        의사: 그 부분은 이 뒤의 치아 사이즈를 조금 키우면서 6개 같은 5개 치아를 만들게 될겁니다.
+        의사: 대칭적인 형태로 이렇게 제작이 될 거고, 위 턱의 어금니쪽 같은 경우는 광대뼈 안쪽에 상악동이라고 하는 공기주머니가 있어요.
+        의사: 이 공기주머니의 존재 때문에 임플란트를 할 때, 대부분의 경우에 임플란트를 할 때 폭과 높이가 충분해야 하는데 높이가 부족한 경우가 많습니다.
+        의사: 그래서 양쪽 상악동에 뼈이식을 하면서 진행을 하게 될겁니다.
+        의사: 위에는 이렇게 정리가 될 거구요.
+        의사: 밑에는 이 남겨놓은 송곳니와 작은 어금니 뒤쪽으로 치아 2개가 비게 되구요.
+        의사: 이쪽도 어금니 뒤로 2개가 비게 되는데 이 양쪽 2개 비는 자리에 임플란트를 2개씩 식립을 할 거고 이 앞니 빠진 자리와 뿌리조각 제거한 자리는 이 양쪽에 살리기로 한 치아를 연결해서 씌우는 브릿지라는 치료를 해서 이제 수복을 하게 될 거예요.
+        의사: 지금 말씀드린 발치, 임플란트, 뼈이식 이런 과정들은 수면 상태에서 한번에 다 진행을 하게 될 거고 오늘 임시치아까지 다 해서 마무리를 할 겁니다.
+        의사: 전체적인 치료 기간은 발치하고 뼈이식하고 임플란트 심어놓은 것들이 잇몸뼈하고 결합하는데 시간이 좀 필요하거든요.
+        의사: 그래서 3개월에서 4개월 정도 걸리게 될 거고 그 기간 동안은 조금 불편하시겠지만 임시치아 상태로 지내시게 될 거예요.
+        의사: 차분하게 준비해서 마무리 잘 하겠습니다.
+        환자: 오늘 수술이 어디까지 진행됩니까?
+        의사: 지금 말씀드린 발치, 뼈이식, 임플란트 이런 것들을 다 할 거예요.
+        의사: 임시치아까지.
+        의사: 네.
+        환자: 임플란트 식립하는 것까지 다 하나요?
+        의사: 네네.
+        의사: 위에 8개, 아래 4개.
+        의사: 12개 임플란트를 뼈 안에 다 넣을 겁니다.
+        환자: 저 밑에 염증이 좀 심한데, 염증이 있을 때 수술해도 괜찮나요?
+        의사: 염증을 깨끗하게 다 정리하고 그 자리에 임플란트를 심을거고, 염증을 제거하고 나면 잇몸뼈에 이렇게 움푹 파인 일종의 웅덩이처럼 생기는데, 그 부분은 뼈이식을 해서 회복을 할 겁니다.
+        환자: 저처럼 임플란트 하느라 발치를 많이 하는 사람들이 있어요?
+        의사: 네 저희는 거의 매일 하고 있습니다.
+        의사: 그래서 전신적인 컨디션이 특별히 떨어지시는게 아니라면 수술이라든지 수술 이후 회복에 크게 지장이 있진 않구요.
+        환자: 그 다음에 이게 다 완치됐을 때, 3년 후에, 배열 같은 것은 깨끗하게 바꿀 수 있나요?
+        의사: 이 치아들은 다 만들어서 제작이 되기 때문에 형태라든지 색깔 이런 것들은 예쁘게 원하시는대로 제작을 할 수 있어요.
+        의사: 다만 위에 앞니 2개는 남겨놓잖아요.
+        의사: 그래서 얘랑 너무 동떨어지는 색깔이나 이렇게 하면 티가 날 수 있기 때문에 걔하고 밸런스를 맞춰서 자연스러워 보이는 선에서 제작을 하는게 나을 것 같습니다.
+        의사: 추후에 임플란트가 뼈에 단단하게 붙고서 치아 모양을 만들 때 다시 한번 말씀해주시면 저희가 그 부분을 치료 계획에 반영을 할 수 있습니다.선생님 외에 오늘 다른 진료가 없어요.
+        의사: 그래서 선생님에게 집중해서 진료 하겠습니다.
+        의사: 너무 긴장하지 마시구요.
+        의사: 잘 하겠습니다.
+      </example>
     Create a conversation that takes place during {situation} in the {department} at {date}.
   expected_output: >
     A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean)
@@ -36,7 +125,7 @@ conversation_generation_task:
 
 intent_extraction_task:
   description: >
-    Analyze the generated doctor-patient conversation and extract key medical intents. 
+    Analyze the generated doctor-patient conversation and extract key medical intents.
     Identify and categorize intentions such as symptom reporting, diagnosis requests, treatment discussions, and follow-up arrangements.
     Intent should be a simple word only.
     Follow the format below:
@@ -44,7 +133,7 @@ intent_extraction_task:
       * intent2 : intent2 keywords
       ...
   expected_output: >
-    A structured list of identified medical intents, each categorized and briefly explained. 
+    A structured list of identified medical intents, each categorized and briefly explained.
     The output should include the context in which each intent was expressed.(target language: korean)
   agent: medical_intent_extractor
   context:
