refactor: Add Domain_Searcher agent and domain_searching_task
- Add Domain_Searcher agent with role, goal, and backstory for searching and retrieving relevant medical information.
- Add domain_searching_task with description, expected output, and agent context for searching domain-specific medical information.

refactor: Update conversation_generation_task and intent_extraction_task

- Update conversation_generation_task description and fix example in tasks.yaml.
- Update conversation_generation_task description formatting and add missing punctuation.
- Update intent_extraction_task description formatting and add missing punctuation.

refactor: Update agents.yaml and crew.py

- Add Domain_Searcher agent to agents.yaml.
- Add domain_searcher agent function to crew.py.
- Add domain_searching_task function to crew.py.

refactor: Update tasks.yaml

- Add domain_searching_task with description, expected output, and agent context.

--- a/src/doc_gen/config/agents.yaml
+++ b/src/doc_gen/config/agents.yaml
@@ -1,3 +1,11 @@
+Domain_Searcher:
+  role: >
+    Medical Domain Expert
+  goal: >
+    Search and retrieve relevant medical information from trusted sources, focusing on specific medical topics and queries.
+  backstory: >
+    You are an expert in the medical field, with access to a wide range of resources and databases to find accurate and up-to-date information on various medical topics.
+
 Conversation_Generator:
   role: >
     Medical Dialogue Generator
