--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -1,3 +1,13 @@
+domain_searching_task:
+  description: >
+    Search for the domain-specific information related to the medical field.
+    The search should focus on finding the latest medical guidelines, treatment protocols, or research papers related to the given medical scenario.
+    The search results should be relevant and up-to-date.
+    Find the domain specific infomations that takes place during {situation} in the {department} at {date}.
+  expected_output: >
+    A summary of the search results, including key information, guidelines, or research findings related to the medical scenario.(target language: korean)
+  agent: domain_searcher
+
 conversation_generation_task:
   description: >
     Generate a natural conversation between a doctor and a patient based on a medical scenario.
@@ -122,6 +132,8 @@ conversation_generation_task:
   expected_output: >
     A dialogue script that captures the interaction between the doctor and patient, focusing on symptoms, diagnosis, and treatment recommendations.(target language: korean)
   agent: conversation_generator
+  context:
+    - domain_searching_task
 
 intent_extraction_task:
   description: >
