--- a/src/doc_gen/config/tasks.yaml
+++ b/src/doc_gen/config/tasks.yaml
@@ -1,8 +1,7 @@
 domain_searching_task:
   description: >
-    Search for the domain-specific information related to the medical field.
-    The search should focus on finding the latest medical guidelines, treatment protocols, or research papers related to the given medical scenario.
-    The search results should be relevant and up-to-date.
+    Search for domain-specific information related to the medical field, focusing on the latest medical guidelines, treatment protocols, and research papers pertinent to the specified medical scenarios. 
+    The search results should be relevant, up-to-date, and provide accurate details that can aid in generating conversations for consultations, treatments, and surgeries between patients and doctors.
     Find the domain specific infomations that takes place during {situation} in the {department} at {date}.
   expected_output: >
     A summary of the search results, including key information, guidelines, or research findings related to the medical scenario.(target language: korean)
